--- a/index.css
+++ b/index.css
@@ -18,5 +18,5 @@ body {
   bottom: 0;
   width: 100%;
   max-height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
